# cpp_kafka_example

ModernCppKafkaExample/: CMakeLists.txt  ModernCppKafkaConsumer.cpp  ModernCppKafkaProducer.cpp
RDKafkaExample/: CMakeLists.txt  RDKafkaConsumner.cpp  RDKafkaProducer.cpp
